--- a/index.html
+++ b/index.html
@@ -5,72 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <script>
-        $("html, body").animate({
-            scrollTop: 0
-        }, "slow");
-
-    </script>
-    <style>
-        * {
-            padding: 0px;
-            margin: 0px;
-
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-
-        .menu {
-            background-color: darkblue;
-            height: 50px;
-            width: 100%;
-
-
-
-
-        }
-
-        .menu ul {
-            list-style: none;
-
-
-        }
-
-        li a {
-            text-decoration: none;
-            color: white;
-        }
-
-        .menu ul li {
-            background-color: darkblue;
-            height: 50px;
-            float: left;
-            width: 150px;
-            display: block;
-
-            text-align: center;
-            font-family: sans-serif;
-            font-weight: bold;
-            font-size: 16px;
-            text-transform: uppercase;
-            line-height: 50px;
-            position: relative;
-        }
-
-        .menu ul li:hover {
-            background-color: #d060ba;
-        }
-
-        p {
-
-
-            padding: 20px;
-        }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
 
 </head>
 
@@ -89,6 +24,4 @@
         <p id="label">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, iste!</p>
 
     </div>
-</body>
-
-</html>
+</body></html>
