--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
             </ul>
-            <img src="../../images/office/img-5.jpg" alt="">
+            <img src="images/img-5.jpg" alt="">
 
         </aside>
         <artical>
@@ -73,7 +73,7 @@
             <div class="services-container">
                 <div class="service-box">
                     <div class="service-img">
-                        <img src="../../images/office/img-1.jpg" alt="" style="min-height: 180px;">
+                        <img src="images/img-1.jpg" alt="" style="min-height: 180px;">
                     </div>
                     <div class="service-title">
                         <h3 style="margin: 10px 0;">Web designing</h3>
@@ -90,7 +90,7 @@
 
                 <div class="service-box">
                     <div class="service-img">
-                        <img src="../../images/office/img-2.jpg" alt="">
+                        <img src="images/img-2.jpg" alt="">
                     </div>
                     <div class="service-title">
                         <h3 style="margin: 10px 0;">Web Development</h3>
@@ -107,10 +107,10 @@
 
                 <div class="service-box">
                     <div class="service-img">
-                        <img src="../../images/office/img-3.jpg"" alt=">
+                        <img src="images/img-3.jpg"" alt=">
                     </div>
                     <div class="service-title">
-                        <h3 style="margin: 10px 0;">Mobile App Deevelopment</h3>
+                        <h3 style="margin: 10px 0;">Mobile App Development</h3>
 
                     </div>
                     <div class="service-desc">
@@ -127,6 +127,4 @@
     <footer>
         &copy; Made By: Pankaj Kapoor
     </footer>
-</body>
-
-</html>
+</body></html>
